sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/* === Sprite Animator === */

/**
 * Adds an animation event to the clip of an entity's `SpriteAnimator`.
 */
int32_t goud_animation_clip_add_event(struct GoudContextId context_id, uint64_t entity_id, uint32_t clip_event_frame, const uint8_t *name_ptr, uint32_t name_len, uint32_t payload_type, int32_t payload_int, float payload_float, const uint8_t *payload_str_ptr, uint32_t payload_str_len);
/* === Animation === */

/**
 * Starts (or restarts) sprite animation playback from frame 0.
 */
int32_t goud_animation_play(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Stops sprite animation playback and resets to frame 0.
 */
int32_t goud_animation_stop(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Sets `AnimationController.current_state`.
 */
int32_t goud_animation_set_state(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *state_ptr, int32_t state_len);
/**
 * Sets a boolean `AnimationController` parameter.
 */
int32_t goud_animation_set_parameter_bool(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *name_ptr, int32_t name_len, bool value);
/**
 * Sets a float `AnimationController` parameter.
 */
int32_t goud_animation_set_parameter_float(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *name_ptr, int32_t name_len, float value);
/**
 * Creates an `AnimationController` component on `entity_id` with an
 */
int32_t goud_animation_controller_create(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Adds a named animation state backed by a clip with `clip_index` placeholder frames.
 */
int32_t goud_animation_controller_add_state(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *state_name_ptr, int32_t state_name_len, int32_t clip_index);
/**
 * Adds a transition from one state to another with a boolean trigger condition.
 */
int32_t goud_animation_controller_add_transition(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *from_ptr, int32_t from_len, const uint8_t *to_ptr, int32_t to_len, const uint8_t *trigger_ptr, int32_t trigger_len);
/**
 * Sets the current state of the animation controller.
 */
int32_t goud_animation_controller_set_state(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *state_ptr, int32_t state_len);
/**
 * Copies the current state name into `out_buf` (truncated if `buf_len` is too small).
 */
int32_t goud_animation_controller_get_state(struct GoudContextId context_id, uint64_t entity_id, uint8_t *out_buf, int32_t buf_len);
/**
 * Advances the animation controller for a single entity by `dt` seconds,
 */
int32_t goud_animation_controller_update(struct GoudContextId context_id, uint64_t entity_id, float dt);
/**
 * Returns the number of fired animation events available for reading.
 */
int32_t goud_animation_events_count(struct GoudContextId context_id);
/**
 * Reads a fired animation event by index from the read buffer.
 */
int32_t goud_animation_events_read(struct GoudContextId context_id, uint32_t index, uint64_t *out_entity, const uint8_t **out_name_ptr, uint32_t *out_name_len, uint32_t *out_frame, uint32_t *out_payload_type, int32_t *out_payload_int, float *out_payload_float, const uint8_t **out_payload_str_ptr, uint32_t *out_payload_str_len);
/**
 * Creates an empty `AnimationLayerStack` component on the given entity.
 */
int32_t goud_animation_layer_stack_create(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Adds a new animation layer to the entity's `AnimationLayerStack`.
 */
int32_t goud_animation_layer_add(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *name_ptr, uint32_t name_len, uint32_t blend_mode);
/**
 * Sets the blend weight of an animation layer by index.
 */
int32_t goud_animation_layer_set_weight(struct GoudContextId context_id, uint64_t entity_id, uint32_t layer_index, float weight);
/**
 * Starts playback on an animation layer by index.
 */
int32_t goud_animation_layer_play(struct GoudContextId context_id, uint64_t entity_id, uint32_t layer_index);
/**
 * Sets the animation clip on a layer by index.
 */
int32_t goud_animation_layer_set_clip(struct GoudContextId context_id, uint64_t entity_id, uint32_t layer_index, uint32_t frame_count, float frame_duration, uint32_t mode);
/**
 * Adds a source-rectangle frame to a layer's animation clip.
 */
int32_t goud_animation_layer_add_frame(struct GoudContextId context_id, uint64_t entity_id, uint32_t layer_index, float x, float y, float w, float h);
/**
 * Resets a finished (or in-progress) animation layer to its initial state.
 */
int32_t goud_animation_layer_reset(struct GoudContextId context_id, uint64_t entity_id, uint32_t layer_index);
/**
 * Creates a rigid body in the 3D physics world.
 */
int64_t goud_physics3d_add_rigid_body(struct GoudContextId ctx, uint32_t body_type, float x, float y, float z, float gravity_scale);
/**
 * Creates a rigid body in the 3D physics world with explicit CCD control.
 */
int64_t goud_physics3d_add_rigid_body_ex(struct GoudContextId ctx, uint32_t body_type, float x, float y, float z, float gravity_scale, bool ccd_enabled);
/**
 * Removes a rigid body from the 3D physics world.
 */
int32_t goud_physics3d_remove_body(struct GoudContextId ctx, uint64_t handle);
/**
 * Creates a joint between two rigid bodies in the 3D physics world.
 */
int64_t goud_physics3d_create_joint(struct GoudContextId ctx, uint64_t body_a, uint64_t body_b, uint32_t joint_kind, float anchor_ax, float anchor_ay, float anchor_az, float anchor_bx, float anchor_by, float anchor_bz, float axis_x, float axis_y, float axis_z, bool use_limits, float limit_min, float limit_max, bool use_motor, float motor_target_velocity, float motor_max_force);
/**
 * Removes a joint from the 3D physics world.
 */
int32_t goud_physics3d_remove_joint(struct GoudContextId ctx, uint64_t handle);
/**
 * Attaches a collider to a rigid body in 3D.
 */
int64_t goud_physics3d_add_collider(struct GoudContextId ctx, uint64_t body_handle, uint32_t shape_type, float hx, float hy, float hz, float radius, float friction, float restitution);
/**
 * Creates a 3D physics provider for the given context with initial gravity.
 */
int32_t goud_physics3d_create(struct GoudContextId ctx, float gx, float gy, float gz);
/**
 * Destroys the 3D physics provider for the given context.
 */
int32_t goud_physics3d_destroy(struct GoudContextId ctx);
/**
 * Sets the gravity vector for the 3D physics provider.
 */
int32_t goud_physics3d_set_gravity(struct GoudContextId ctx, float x, float y, float z);
/**
 * Steps the 3D physics simulation by `dt` seconds.
 */
int32_t goud_physics3d_step(struct GoudContextId ctx, float dt);
/**
 * Writes the position of a 3D body into the provided output pointers.
 */
int32_t goud_physics3d_get_position(struct GoudContextId ctx, uint64_t handle, float *out_x, float *out_y, float *out_z);
/**
 * Sets the linear velocity of a 3D body.
 */
int32_t goud_physics3d_set_velocity(struct GoudContextId ctx, uint64_t handle, float vx, float vy, float vz);
/**
 * Applies a force to a 3D body (accumulated over the frame).
 */
int32_t goud_physics3d_apply_force(struct GoudContextId ctx, uint64_t handle, float fx, float fy, float fz);
/**
 * Applies an instantaneous impulse to a 3D body.
 */
int32_t goud_physics3d_apply_impulse(struct GoudContextId ctx, uint64_t handle, float ix, float iy, float iz);
/**
 * Gets the current gravity vector for the 3D physics world.
 */
int32_t goud_physics3d_get_gravity(struct GoudContextId ctx, float *out_x, float *out_y, float *out_z);
/**
 * Sets the gravity scale for a 3D rigid body.
 */
int32_t goud_physics3d_set_body_gravity_scale(struct GoudContextId ctx, uint64_t handle, float scale);
/**
 * Gets the gravity scale for a 3D rigid body.
 */
int32_t goud_physics3d_get_body_gravity_scale(struct GoudContextId ctx, uint64_t handle, float *out_scale);
/**
 * Sets the friction coefficient for a 3D collider.
 */
int32_t goud_physics3d_set_collider_friction(struct GoudContextId ctx, uint64_t handle, float friction);
/**
 * Gets the friction coefficient for a 3D collider.
 */
int32_t goud_physics3d_get_collider_friction(struct GoudContextId ctx, uint64_t handle, float *out_friction);
/**
 * Sets the restitution (bounciness) for a 3D collider.
 */
int32_t goud_physics3d_set_collider_restitution(struct GoudContextId ctx, uint64_t handle, float restitution);
/**
 * Gets the restitution (bounciness) for a 3D collider.
 */
int32_t goud_physics3d_get_collider_restitution(struct GoudContextId ctx, uint64_t handle, float *out_restitution);
/**
 * Sets the fixed timestep for the 3D physics simulation.
 */
int32_t goud_physics3d_set_timestep(struct GoudContextId ctx, float dt);
/**
 * Gets the current fixed timestep for the 3D physics simulation.
 */
int32_t goud_physics3d_get_timestep(struct GoudContextId ctx, float *out_dt);
/* === Other Exports === */

/**
 * Creates an empty `Skeleton2D` component on the given entity.
 */
int32_t goud_skeleton_create(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Adds a bone to the skeleton on `entity_id`. Returns the bone index
 */
int32_t goud_skeleton_add_bone(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *bone_name_ptr, int32_t bone_name_len, int32_t parent_index, float x, float y, float rotation);
/**
 * Sets the local transform of a bone by index.
 */
int32_t goud_skeleton_set_bone_transform(struct GoudContextId context_id, uint64_t entity_id, int32_t bone_index, float x, float y, float rotation);
/**
 * Plays a skeletal animation clip by name on the entity. Always creates a
 */
int32_t goud_skeleton_play_clip(struct GoudContextId context_id, uint64_t entity_id, const uint8_t *clip_name_ptr, int32_t clip_name_len, bool looping);
/**
 * Creates a new tween interpolating from `start` to `end` over
 */
int64_t goud_tween_create(struct GoudContextId _context_id, float start, float end, float duration, int32_t easing_type);
/**
 * Advances a tween by `dt` seconds.
 */
int32_t goud_tween_update(struct GoudContextId _context_id, int64_t handle, float dt);
/**
 * Writes the current interpolated value of a tween into `out_value`.
 */
int32_t goud_tween_value(struct GoudContextId _context_id, int64_t handle, float *out_value);
/**
 * Returns 1 if the tween is complete, 0 if not, or a negative error code.
 */
int32_t goud_tween_is_complete(struct GoudContextId _context_id, int64_t handle);
/**
 * Resets a tween's elapsed time to zero.
 */
int32_t goud_tween_reset(struct GoudContextId _context_id, int64_t handle);
/**
 * Destroys a tween handle, freeing its storage.
 */
int32_t goud_tween_destroy(struct GoudContextId _context_id, int64_t handle);