sdks/python/goud_engine/generated/_ffi.py


    # physics3d
    try:
        _lib.goud_physics3d_create.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_create.restype = ctypes.c_int32
        _lib.goud_physics3d_destroy.argtypes = [GoudContextId]
        _lib.goud_physics3d_destroy.restype = ctypes.c_int32
        _lib.goud_physics3d_set_gravity.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_set_gravity.restype = ctypes.c_int32
        _lib.goud_physics3d_add_rigid_body.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_add_rigid_body.restype = ctypes.c_int64
        _lib.goud_physics3d_add_rigid_body_ex.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_bool]
        _lib.goud_physics3d_add_rigid_body_ex.restype = ctypes.c_int64
        _lib.goud_physics3d_add_collider.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_add_collider.restype = ctypes.c_int64
        _lib.goud_physics3d_remove_body.argtypes = [GoudContextId, ctypes.c_uint64]
        _lib.goud_physics3d_remove_body.restype = ctypes.c_int32
        _lib.goud_physics3d_create_joint.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_create_joint.restype = ctypes.c_int64
        _lib.goud_physics3d_remove_joint.argtypes = [GoudContextId, ctypes.c_uint64]
        _lib.goud_physics3d_remove_joint.restype = ctypes.c_int32
        _lib.goud_physics3d_step.argtypes = [GoudContextId, ctypes.c_float]
        _lib.goud_physics3d_step.restype = ctypes.c_int32
        _lib.goud_physics3d_get_position.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_position.restype = ctypes.c_int32
        _lib.goud_physics3d_set_velocity.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_set_velocity.restype = ctypes.c_int32
        _lib.goud_physics3d_apply_force.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_apply_force.restype = ctypes.c_int32
        _lib.goud_physics3d_apply_impulse.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics3d_apply_impulse.restype = ctypes.c_int32
        _lib.goud_physics3d_get_gravity.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_gravity.restype = ctypes.c_int32
        _lib.goud_physics3d_set_body_gravity_scale.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics3d_set_body_gravity_scale.restype = ctypes.c_int32
        _lib.goud_physics3d_get_body_gravity_scale.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_body_gravity_scale.restype = ctypes.c_int32
        _lib.goud_physics3d_set_collider_friction.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics3d_set_collider_friction.restype = ctypes.c_int32
        _lib.goud_physics3d_get_collider_friction.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_collider_friction.restype = ctypes.c_int32
        _lib.goud_physics3d_set_collider_restitution.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics3d_set_collider_restitution.restype = ctypes.c_int32
        _lib.goud_physics3d_get_collider_restitution.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_collider_restitution.restype = ctypes.c_int32
        _lib.goud_physics3d_set_timestep.argtypes = [GoudContextId, ctypes.c_float]
        _lib.goud_physics3d_set_timestep.restype = ctypes.c_int32
        _lib.goud_physics3d_get_timestep.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics3d_get_timestep.restype = ctypes.c_int32
    except AttributeError:
        pass  # feature not compiled in

    # animation_controller
    _lib.goud_animation_controller_create.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_animation_controller_create.restype = ctypes.c_int32
    _lib.goud_animation_controller_add_state.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_int32]
    _lib.goud_animation_controller_add_state.restype = ctypes.c_int32
    _lib.goud_animation_controller_add_transition.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32]
    _lib.goud_animation_controller_add_transition.restype = ctypes.c_int32
    _lib.goud_animation_controller_set_state.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32]
    _lib.goud_animation_controller_set_state.restype = ctypes.c_int32
    _lib.goud_animation_controller_get_state.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32]
    _lib.goud_animation_controller_get_state.restype = ctypes.c_int32
    _lib.goud_animation_controller_update.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
    _lib.goud_animation_controller_update.restype = ctypes.c_int32

    # animation_events
    _lib.goud_animation_clip_add_event.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.c_uint32, ctypes.c_int32, ctypes.c_float, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_animation_clip_add_event.restype = ctypes.c_int32
    _lib.goud_animation_events_count.argtypes = [GoudContextId]
    _lib.goud_animation_events_count.restype = ctypes.c_int32
    _lib.goud_animation_events_read.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.POINTER(ctypes.c_uint8)), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_int32), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.POINTER(ctypes.c_uint8)), ctypes.POINTER(ctypes.c_uint32)]
    _lib.goud_animation_events_read.restype = ctypes.c_int32

    # tween
    _lib.goud_tween_create.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_int32]
    _lib.goud_tween_create.restype = ctypes.c_int64
    _lib.goud_tween_update.argtypes = [GoudContextId, ctypes.c_int64, ctypes.c_float]
    _lib.goud_tween_update.restype = ctypes.c_int32
    _lib.goud_tween_value.argtypes = [GoudContextId, ctypes.c_int64, ctypes.POINTER(ctypes.c_float)]
    _lib.goud_tween_value.restype = ctypes.c_int32
    _lib.goud_tween_is_complete.argtypes = [GoudContextId, ctypes.c_int64]
    _lib.goud_tween_is_complete.restype = ctypes.c_int32
    _lib.goud_tween_reset.argtypes = [GoudContextId, ctypes.c_int64]
    _lib.goud_tween_reset.restype = ctypes.c_int32
    _lib.goud_tween_destroy.argtypes = [GoudContextId, ctypes.c_int64]
    _lib.goud_tween_destroy.restype = ctypes.c_int32

    # skeleton
    _lib.goud_skeleton_create.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_skeleton_create.restype = ctypes.c_int32
    _lib.goud_skeleton_add_bone.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_skeleton_add_bone.restype = ctypes.c_int32
    _lib.goud_skeleton_set_bone_transform.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_skeleton_set_bone_transform.restype = ctypes.c_int32
    _lib.goud_skeleton_play_clip.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_bool]
    _lib.goud_skeleton_play_clip.restype = ctypes.c_int32

    # animation_layer
    _lib.goud_animation_layer_stack_create.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_animation_layer_stack_create.restype = ctypes.c_int32
    _lib.goud_animation_layer_add.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_animation_layer_add.restype = ctypes.c_int32
    _lib.goud_animation_layer_set_weight.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float]
    _lib.goud_animation_layer_set_weight.restype = ctypes.c_int32
    _lib.goud_animation_layer_play.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32]
    _lib.goud_animation_layer_play.restype = ctypes.c_int32
    _lib.goud_animation_layer_set_clip.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_animation_layer_set_clip.restype = ctypes.c_int32
    _lib.goud_animation_layer_add_frame.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_animation_layer_add_frame.restype = ctypes.c_int32
    _lib.goud_animation_layer_reset.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32]
    _lib.goud_animation_layer_reset.restype = ctypes.c_int32

    # animation_control
    _lib.goud_animation_play.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_animation_play.restype = ctypes.c_int32
    _lib.goud_animation_stop.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_animation_stop.restype = ctypes.c_int32
    _lib.goud_animation_set_state.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32]
    _lib.goud_animation_set_state.restype = ctypes.c_int32
    _lib.goud_animation_set_parameter_bool.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_bool]
    _lib.goud_animation_set_parameter_bool.restype = ctypes.c_int32
    _lib.goud_animation_set_parameter_float.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_float]
    _lib.goud_animation_set_parameter_float.restype = ctypes.c_int32
